src/vivado/core_mem_vivado/core_mem_vivado.sdk/.metadata/.plugins/org.eclipse.cdt.ui/testMemory.build.log
13:54:03 **** Incremental Build of configuration Debug for project testMemory ****
make pre-build main-build 
a9-linaro-pre-build-step
' '
'Building file: ../src/main.cc'
'Invoking: ARM v7 g++ compiler'
arm-none-eabi-g++ -Wall -O0 -g3 -I../../testMemory_bsp/ps7_cortexa9_0/include -c -fmessage-length=0 -MT"src/main.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -MMD -MP -MF"src/main.d" -MT"src/main.o" -o "src/main.o" "../src/main.cc"
../src/main.cc: In function 'int main()':
../src/main.cc:40:2: error: 'XMem_Set_a_V' was not declared in this scope
  XMem_Set_a_V(&doMem,a);
  ^~~~~~~~~~~~
../src/main.cc:40:2: note: suggested alternative: 'XMem_Set_a'
  XMem_Set_a_V(&doMem,a);
  ^~~~~~~~~~~~
  XMem_Set_a
../src/main.cc:41:2: error: 'XMem_Set_ma_V' was not declared in this scope
  XMem_Set_ma_V(&doMem,ma);
  ^~~~~~~~~~~~~
../src/main.cc:41:2: note: suggested alternative: 'XMem_Set_ma'
  XMem_Set_ma_V(&doMem,ma);
  ^~~~~~~~~~~~~
  XMem_Set_ma
../src/main.cc:42:2: error: 'XMem_Set_flag_V' was not declared in this scope
  XMem_Set_flag_V(&doMem,flag);
  ^~~~~~~~~~~~~~~
../src/main.cc:42:2: note: suggested alternative: 'XMem_Set_flag'
  XMem_Set_flag_V(&doMem,flag);
  ^~~~~~~~~~~~~~~
  XMem_Set_flag
../src/main.cc:43:2: error: 'XMem_Set_data_V_i' was not declared in this scope
  XMem_Set_data_V_i(&doMem,data);
  ^~~~~~~~~~~~~~~~~
../src/main.cc:43:2: note: suggested alternative: 'XMem_Set_data_i'
  XMem_Set_data_V_i(&doMem,data);
  ^~~~~~~~~~~~~~~~~
  XMem_Set_data_i
../src/main.cc:58:9: error: 'XMem_Get_data_V_o' was not declared in this scope
  data = XMem_Get_data_V_o(&doMem);
         ^~~~~~~~~~~~~~~~~
../src/main.cc:58:9: note: suggested alternative: 'XMem_Get_data_o'
  data = XMem_Get_data_V_o(&doMem);
         ^~~~~~~~~~~~~~~~~
         XMem_Get_data_o
make: *** [src/subdir.mk:26: src/main.o] Error 1

13:54:04 Build Finished (took 734ms)

